[build-system]
requires = [
    "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "freanalysis_radiation"
version = "0.1"
dependencies = [
    "intake",
    "intake-esm @ https://github.com/jtmims/intake-esm/archive/refs/tags/2025.2.3.tar.gz"

]
requires-python = ">= 3.6"
authors = [
    {name = "developers"},
]
maintainers = [
    {name = "developer", email = "developer-email@address.domain"},
]
description = "Radiative flux analyzer for GFDL model output"
readme = "README.md"
classifiers = [
    "Programming Language :: Python"
]

[project.urls]
repository = "https://github.com/NOAA-GFDL/analysis-scripts.git"
